# OS_lab5

./: .gitignore  CMakeLists.txt  README.md
src/: client_logic.cpp  client_logic.h  client_main.cpp  employee.h  employee_file.cpp  employee_file.h  input_utils.cpp  input_utils.h  named_pipe.cpp  named_pipe.h  protocol.h  record_locks.cpp  record_locks.h  server_logic.cpp  server_logic.h  server_main.cpp  winapi_error.cpp  winapi_error.h
tests/: employee_file_tests.cpp  protocol_tests.cpp  record_locks_tests.cpp
